# Conlog

./: .gitignore  README  README.md  build.py  pyproject.toml  readme.md  setup.py  shell.nix
conlog/: __main__.py  brute.py  datatypes.py  directed.py  elegant.py  evaluator.py  frontends.py  monotonicity.py  plot.py  solver.py  solver_astar.py  solver_bindings.pyx  solver_c.py  solver_c_fast.c  solver_c_fast.h  util_graphs.py
examples/: bomb.cla  bounds-check.cla  collatz.cla  diode.cla  hello_world.clg  multiplication.cla  next_lcm_machine.cla  next_lcm_machine_1.cla  next_lcm_machine_harder.cla  pathological.cla  pathological.clt  run_solver.py  run_solver_diode.py  run_solver_functions.py  squares.cla  triangle_sum.cla  triangle_sum.clg
nix/: sources.json
s/: black
test_graphs/: triangle_sum.py
tests/: grid_input.py  run_solver_diode.py  run_solver_functions.py  test_bounds.py  test_brute_force_evaluator.py  test_dfs.py  triangle_sum.py
