[tool.pyright]

verboseOutput = true
reportMissingImports = true
pythonVersion = "3.10"

[tool.poetry]
name = "conlog"
version = "0.0.0.alpha0"
description = "Conlog: SMT (Satisfying Maze Traversal) Solver"
authors = []

[tool.poetry.scripts]
conlog = "conlog:__main__"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
networkx = "*"

[tool.poetry.dev-dependencies]
pytest = ">=5,<6"

[tool.black]

[tool.isort]
profile = "black"
known_first_party = ["problems"]
