[tool.pyright]

verboseOutput = true
reportMissingImports = true
pythonVersion = "3.10"

[tool.poetry]
name = "conlog"
version = "0.0.0.alpha0"
description = "Conlog: SMT (Satisfying Maze Traversal) Solver"
authors = []
build = 'build.py'

[tool.poetry.scripts]
conlog = "conlog:__main__"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
numpy = "<2"
networkx = "<3"

[tool.poetry.dev-dependencies]
pytest = ">=5,<6"
cython = "*"

[tool.black]

[tool.isort]
profile = "black"
known_first_party = ["problems"]


[build-system]
requires = ["poetry>=0.12", "cython", "oldest-supported-numpy"]
build-backend = "poetry.masonry.api"
